--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,7 +5,7 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = bdo_tool
+PRODUCT_NAME = bdo_things
 
 // The application's bundle identifier
 PRODUCT_BUNDLE_IDENTIFIER = github.sms1875.bdoTool
