--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^4.0.3
   http: ^0.13.5
+  window_manager: ^0.2.7
 
 dev_dependencies:
   flutter_test:
