--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^4.0.3
   http: ^0.13.5
   window_manager: ^0.3.1
+  url_launcher: ^6.0.12
 
 dev_dependencies:
   flutter_test:
