--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,14 @@
 .history
 .svn/
 migrate_working_dir/
-
 # IntelliJ related
 *.iml
 *.ipr
 *.iws
 .idea/
+
+google-services.json
+firebase_options.json
 
 # The .vscode folder contains launch configuration and tasks you configure in
 # VS Code which you may wish to be included in version control, so this line
