--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   syncfusion_flutter_calendar: ^21.1.39
   firebase_core: ^2.9.0
   cloud_firestore: ^4.5.0
+  provider: ^6.0.1
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
