feat: CORS 프록시 서버 추가
PROXY_URL 을 통해 웹사이트에서 거래소 API CORS 해결

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   syncfusion_flutter_calendar: ^21.1.39
   provider: ^6.0.1
   carousel_slider: ^4.2.1
+  flutter_platform_widgets: ^1.0.0
 
 dev_dependencies:
   flutter_test:
