--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   table_calendar: ^3.0.3
   syncfusion_flutter_calendar: ^21.1.39
   carousel_slider: ^4.2.1
-
+  html: ^0.15.0
 
 dev_dependencies:
   flutter_test:
