--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,22 +33,23 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  flutter_clean_architecture: ^5.0.4
   provider: ^6.0.1
-
-  http: ^1.2.1
   window_manager: ^0.3.1
   url_launcher: ^6.0.12
-
   cupertino_icons: ^1.0.2
   google_fonts: ^6.2.1
-  flutter_platform_widgets: ^7.0.0
-  table_calendar: ^3.0.3
-  syncfusion_flutter_calendar: ^25.2.5
-  carousel_slider: ^4.2.1
   html: ^0.15.0
-
+  collection: ^1.17.0
+  go_router: ^14.1.3
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.9.0
+  dio: ^5.4.3+1
+  http: ^1.2.1
+  intl: ^0.19.0
 dev_dependencies:
+  build_runner: ^2.4.10
+  freezed: ^2.5.3
+  json_serializable: ^6.8.0
   flutter_test:
     sdk: flutter
 
